Hopefully fix gist line spacing

--- a/themes/pelican-svbhack/static/css/style.less
+++ b/themes/pelican-svbhack/static/css/style.less
@@ -10,6 +10,12 @@
 @serif: 'PT Serif', serif;
 @mono: 'PT Mono', monospace;
 
+.gist pre,
+.gist code {
+  font: inherit;
+  white-space: pre;
+}
+
 body {
   margin: 0;
   padding: 0;
